# ml-zoomcamp-2021

./: .gitignore  Dockerfile
exercises/notebooks/: Pipfile  homework-01.ipynb  homework-04.ipynb  homework-06.ipynb  homework-08.ipynb
exercises/scripts/homework5/: serving.py
midterm project/: Dockerfile  README.MD  inference.py  pyproject.toml
midterm project/data/: heart.csv
midterm project/notebooks/: 00-EDA.ipynb  01-training_&_eval.ipynb
midterm project/scripts/: train.py
notebooks/: homework-02.ipynb  homework-03.ipynb  homework-05.ipynb
