[tool.poetry]
name = "heart-disease-predictor"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.r.loscalzo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
numpy = "^1.21.3"
optuna = "^2.10.0"
xgboost = "^1.5.0"
toolz = "^0.11.1"
scikit-learn = "^1.0.1"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
